--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "documents"
   ],
   "author": "Soumaila Abdoulaye DIARRA",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
+  }
 }
