--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
   ],
   "author": "Soumaila Abdoulaye DIARRA",
   "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.1.3",
+    "concurrently": "^8.0.1",
+    "nodemon": "^2.0.22",
+    "typescript": "^5.0.4"
+  },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
