--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "pdf-img-convert": "^1.2.1",
     "uuid": "^9.0.0"
   }
 }
